syntax = "proto3";

package simple_project;
option go_package = "./server";

service SimpleService {
    rpc EndpointOne(SimpleRequest) returns (SimpleResponse) {}

    rpc EndpointTwo(SimpleRequest) returns (SimpleResponse) {}

    rpc ResponseStream(SimpleRequest) returns (stream SimpleResponse) {}

    rpc RequestStream(stream SimpleRequest) returns (SimpleResponse) {}

    rpc BidirectionalStream(stream SimpleRequest) returns (stream SimpleResponse) {}
}

message SimpleRequest {
    string message = 1;
}

message SimpleResponse {
    string message = 1;
}